# fitness-coach-agent

./: README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run_agent.py
fitness_env/: evaluation.py  fitness_coach_env.py  schemas.py
server/: app.py
